--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
           </span>
           <%= button_to "Sign out", destroy_user_session_path,
                 method: :delete, data: { turbo: false },
-                class: "bg-gold text-white px-3 py-1 rounded-md text-sm font-medium hover:bg-red-600" %>
+                class: "bg-gold text-white px-3 py-1 rounded-md text-sm font-medium hover:bg-brand-blue" %>
         </div>
       <% else %>
         <div class="hidden sm:ml-6 sm:flex sm:space-x-8 items-center">
