--- a/app/views/provisions/edit.html.erb
+++ b/app/views/provisions/edit.html.erb
@@ -44,7 +44,7 @@
   <% end %>
 
   <div class="mt-4">
-    <%= f.submit "Update provision", class: "px-4 py-2 rounded bg-blue-600 text-white hover:bg-blue-700" %>
+    <%= f.submit "Update provision", class: "px-4 py-2 rounded bg-brand-blue text-white hover:bg-gold" %>
     <%= link_to "Cancel", entries_path(subject_id: params[:subject_id]), class: "ml-2 text-gray-600 hover:underline" %>
   </div>
 <% end %>
