--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -93,7 +93,7 @@
             <th class="py-2 px-2 text-center">Total</th>
             <th class="py-2 px-2 text-center">New</th>
             <th class="py-2 px-2 text-center">Due</th>
-            <th class="py-2 pr-2">Status</th>
+            <th class="py-2 pr-2 text-center">Status</th>
             <th class="py-2 px-2 text-center">Actions</th>
           </tr>
         </thead>
@@ -130,7 +130,7 @@
                 </span>
               </td>
 
-              <td class="py-2 pr-2"><%= session_status_badge(s) %></td>
+              <td class="py-2 pr-2 text-center"><%= session_status_badge(s) %></td>
 
               <td class="py-2 px-2 text-center">
                 <%= link_to "Open",
