--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
           Brief/<span class="text-gold">Case</span>
         </h2>
         <p class="mt-2 text-sm text-gray-500 max-w-xs">
-          case law made easy with spaced repetition
+          law made easy with spaced repetition
         </p>
       </div>
 
