--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,11 +15,11 @@
         <div class="hidden sm:ml-6 sm:flex sm:space-x-8 items-center">
           <%= link_to "Dashboard", authenticated_root_path,
                 class: "text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium" %>
-          <%= link_to "Decks", subjects_path,
+          <%= link_to "Subjects", subjects_path,
                 class: "text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium" %>
           <%= link_to "Cards", entries_path,
                 class: "text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium" %>
-          <%= link_to "Learn", sessions_path,
+          <%= link_to "Sessions", sessions_path,
                 class: "text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium" %>
         </div>
 
